add unit test and fix type cast