@@ -51,7 +51,6 @@ import java.util.Stack;
  * @version 1.1
  * @see XmlHandler
  * @see HandlerBase
- * @see SAXDriver
  */
 public class XmlParser
 {
@@ -369,15 +368,15 @@ public class XmlParser
     private static Hashtable attributeTypeHash;
     static {
         attributeTypeHash = new Hashtable();
-        attributeTypeHash.put("CDATA", new Integer(ATTRIBUTE_CDATA));
-        attributeTypeHash.put("ID", new Integer(ATTRIBUTE_ID));
-        attributeTypeHash.put("IDREF", new Integer(ATTRIBUTE_IDREF));
-        attributeTypeHash.put("IDREFS", new Integer(ATTRIBUTE_IDREFS));
-        attributeTypeHash.put("ENTITY", new Integer(ATTRIBUTE_ENTITY));
-        attributeTypeHash.put("ENTITIES", new Integer(ATTRIBUTE_ENTITIES));
-        attributeTypeHash.put("NMTOKEN", new Integer(ATTRIBUTE_NMTOKEN));
-        attributeTypeHash.put("NMTOKENS", new Integer(ATTRIBUTE_NMTOKENS));
-        attributeTypeHash.put("NOTATION", new Integer(ATTRIBUTE_NOTATION));
+        attributeTypeHash.put("CDATA", Integer.valueOf(ATTRIBUTE_CDATA));
+        attributeTypeHash.put("ID", Integer.valueOf(ATTRIBUTE_ID));
+        attributeTypeHash.put("IDREF", Integer.valueOf(ATTRIBUTE_IDREF));
+        attributeTypeHash.put("IDREFS", Integer.valueOf(ATTRIBUTE_IDREFS));
+        attributeTypeHash.put("ENTITY", Integer.valueOf(ATTRIBUTE_ENTITY));
+        attributeTypeHash.put("ENTITIES", Integer.valueOf(ATTRIBUTE_ENTITIES));
+        attributeTypeHash.put("NMTOKEN", Integer.valueOf(ATTRIBUTE_NMTOKEN));
+        attributeTypeHash.put("NMTOKENS", Integer.valueOf(ATTRIBUTE_NMTOKENS));
+        attributeTypeHash.put("NOTATION", Integer.valueOf(ATTRIBUTE_NOTATION));
     }
 
     //
@@ -490,6 +489,8 @@ public class XmlParser
      *            The error message.
      * @param textFound
      *            The text that caused the error (or null).
+     * @param textExpected
+     *            The expected text (or null).
      * @see XmlHandler#error
      * @see #line
      */
@@ -524,7 +525,7 @@ public class XmlParser
     void error(String message, char textFound, String textExpected)
             throws java.lang.Exception
     {
-        error(message, new Character(textFound).toString(), textExpected);
+        error(message, Character.toString(textFound), textExpected);
     }
 
     //////////////////////////////////////////////////////////////////////
@@ -668,7 +669,7 @@ public class XmlParser
      * We do not look for the XML declaration here, because it is handled by
      * pushURL().
      * 
-     * @see pushURL
+     *
      */
     void parseProlog() throws java.lang.Exception
     {
@@ -1001,7 +1002,7 @@ public class XmlParser
      *                          [WFC: unique Att spec]
      *    
      *   
-     *  
+ *
      * </pre>
      * 
      * <p>
@@ -1658,7 +1659,7 @@ public class XmlParser
                     case 'f':
                     case 'F':
                         value *= 16;
-                        value += Integer.parseInt(new Character(c).toString(),
+                        value += Integer.parseInt(Character.toString(c),
                                 16);
                         break;
                     case ';':
@@ -1684,7 +1685,7 @@ public class XmlParser
                     case '8':
                     case '9':
                         value *= 10;
-                        value += Integer.parseInt(new Character(c).toString(),
+                        value += Integer.parseInt(Character.toString(c),
                                 10);
                         break;
                     case ';':
@@ -1709,7 +1710,7 @@ public class XmlParser
         } else {
             // too big for surrogate
             error("character reference " + value + " is too large for UTF-16",
-                    new Integer(value).toString(), null);
+                    Integer.toString(value), null);
         }
         
         */
@@ -2172,7 +2173,7 @@ public class XmlParser
             }
         } catch (EOFException e) {
             error("end of input while looking for delimiter (started on line "
-                    + startLine + ')', null, new Character(delim).toString());
+                    + startLine + ')', null, String.valueOf(delim));
         }
 
         // Normalise whitespace if necessary.
@@ -2225,8 +2226,8 @@ public class XmlParser
      * 
      *  
      *   
-     *    [1] S ::= (#x20 | #x9 | #xd | #xa)+
-     *    
+     *    [1] S ::= (#x20 | #x9 | #xD | #xA)+
+     *
      *   
      *  
      * </pre>
@@ -2326,7 +2327,7 @@ public class XmlParser
     /**
      * Convert the data buffer to a string.
      * 
-     * @param internFlag
+     *
      *            true if the contents should be interned.
      * @see #intern(char[],int,int)
      */
@@ -2385,7 +2386,7 @@ public class XmlParser
         char c = readCh();
 
         if (c != delim) {
-            error("expected character", c, new Character(delim).toString());
+            error("expected character", c, Character.toString(delim));
         }
     }
 
@@ -2521,7 +2522,6 @@ public class XmlParser
             return newArray;
         }
     }
-
     //////////////////////////////////////////////////////////////////////
     // XML query routines.
     //////////////////////////////////////////////////////////////////////
@@ -2603,7 +2603,7 @@ public class XmlParser
         // Make a new one if necessary.
         if (element == null) {
             element = new Object[3];
-            element[0] = new Integer(CONTENT_UNDECLARED);
+            element[0] = Integer.valueOf(CONTENT_UNDECLARED);
             element[1] = null;
             element[2] = null;
         } else if (contentType != CONTENT_UNDECLARED
@@ -2614,7 +2614,7 @@ public class XmlParser
 
         // Insert the content type, if any.
         if (contentType != CONTENT_UNDECLARED) {
-            element[0] = new Integer(contentType);
+            element[0] = Integer.valueOf(contentType);
         }
 
         // Insert the content model, if any.
@@ -2814,9 +2814,9 @@ public class XmlParser
             return;
         } else {
             attribute = new Object[5];
-            attribute[0] = new Integer(type);
+            attribute[0] = Integer.valueOf(type);
             attribute[1] = value;
-            attribute[2] = new Integer(valueType);
+            attribute[2] = Integer.valueOf(valueType);
             attribute[3] = enumeration;
             attribute[4] = null;
             attlist.put(name.intern(), attribute);
@@ -2941,7 +2941,7 @@ public class XmlParser
     /**
      * Get the notation name associated with an NDATA entity.
      * 
-     * @param ename
+     * @param eName
      *            The NDATA entity name.
      * @return The associated notation name, or null if the entity was not
      *         declared, or if it is not an NDATA entity.
@@ -2957,7 +2957,7 @@ public class XmlParser
     }
 
     /**
-     * Register an entity declaration for later retrieval.
+     * Register an internal entity.
      */
     void setInternalEntity(String eName, String value)
     {
@@ -2991,7 +2991,7 @@ public class XmlParser
  
         if (entityInfo.get(eName) == null) {
             entity = new Object[5];
-            entity[0] = new Integer(eClass);
+            entity[0] = Integer.valueOf(eClass);
             entity[1] = pubid;
             entity[2] = sysid;
             entity[3] = value;
@@ -3117,7 +3117,6 @@ public class XmlParser
      * 
      * @return The next available input character.
      * @see #unread(char)
-     * @see #unread(String)
      * @see #readDataChunk
      * @see #readBuffer
      * @see #line
@@ -3191,8 +3190,6 @@ public class XmlParser
      * @param c
      *            The character to push back.
      * @see #readCh
-     * @see #unread(String)
-     * @see #unread(char[])
      * @see #readBuffer
      */
     void unread(char c) throws java.lang.Exception
@@ -3205,7 +3202,7 @@ public class XmlParser
         if (readBufferPos > 0) {
             readBuffer[--readBufferPos] = c;
         } else {
-            pushString(null, new Character(c).toString());
+            pushString(null, Character.toString(c));
         }
     }
 
@@ -3217,7 +3214,6 @@ public class XmlParser
      * 
      * @see #readCh
      * @see #unread(char)
-     * @see #unread(String)
      * @see #readBuffer
      * @see #pushString
      */
@@ -3247,8 +3243,7 @@ public class XmlParser
      * in the future, it should allow the caller to request an encoding
      * explicitly, and it should also look at the headers with an HTTP
      * connection.
-     * 
-     * @param url
+     *
      *            The java.net.URL object for the entity.
      * @see XmlHandler#resolveEntity
      * @see #pushString
@@ -3618,17 +3613,17 @@ public class XmlParser
 
         // Set up a snapshot of the current
         // input source.
-        input[0] = new Integer(sourceType);
+        input[0] = Integer.valueOf(sourceType);
         input[1] = externalEntity;
         input[2] = readBuffer;
-        input[3] = new Integer(readBufferPos);
-        input[4] = new Integer(readBufferLength);
-        input[5] = new Integer(line);
-        input[6] = new Integer(encoding);
-        input[7] = new Integer(readBufferOverflow);
+        input[3] = Integer.valueOf(readBufferPos);
+        input[4] = Integer.valueOf(readBufferLength);
+        input[5] = Integer.valueOf(line);
+        input[6] = Integer.valueOf(encoding);
+        input[7] = Integer.valueOf(readBufferOverflow);
         input[8] = is;
-        input[9] = new Integer(currentByteCount);
-        input[10] = new Integer(column);
+        input[9] = Integer.valueOf(currentByteCount);
+        input[10] = Integer.valueOf(column);
         input[11] = reader;
 
         // Push it onto the stack.
@@ -3747,9 +3742,6 @@ public class XmlParser
      * but will be put back on failure. Do not attempt to read the string again
      * if the method succeeds.
      * <p>
-     * This method will push back a character rather than an array whenever
-     * possible (probably the majority of cases).
-     * <p>
      * <b>NOTE: </b> This method currently has a hard-coded limit of 100
      * characters for the delimiter.
      * 
@@ -3812,7 +3804,6 @@ public class XmlParser
      * 
      * @param delim
      *            The string delimiter
-     * @see #tryRead(String, boolean)
      * @see #readCh
      */
     void parseUntil(String delim) throws java.lang.Exception
@@ -3841,7 +3832,6 @@ public class XmlParser
      * 
      * @param delim
      *            The string delimiter
-     * @see #tryRead(String, boolean)
      * @see #readCh
      */
     void skipUntil(String delim) throws java.lang.Exception
@@ -3899,8 +3889,6 @@ public class XmlParser
      * @see #filterCR
      * @see #copyUtf8ReadBuffer
      * @see #copyIso8859_1ReadBuffer
-     * @see #copyUcs_2ReadBuffer
-     * @see #copyUcs_4ReadBuffer
      */
     void readDataChunk() throws java.lang.Exception
     {
@@ -4230,7 +4218,7 @@ public class XmlParser
                     sawCR = true;
                 }
             } else if (value < 0x000fffff) {
-                readBuffer[j++] = (char) (0xd8 | ((value & 0x000ffc00) >> 10));
+                readBuffer[j++] = (char) (0xd800 | ((value & 0x000ffc00) >> 10));
                 readBuffer[j++] = (char) (0xdc | (value & 0x0003ff));
             } else {
                 encodingError("value cannot be represented in UTF-16", value, i);
@@ -4442,3 +4430,4 @@ public class XmlParser
     //
     private boolean sawCR;
 }
+
